@@ -1,6 +1,9 @@
 Release 0.6.4 (in development)
 ==============================
 
+* #316: Catch OSErrors occurring when calling graphviz with
+  arguments it doesn't understand.
+
 * Restore compatibility with Pygments >= 1.2.
 
 * #295: Fix escaping of hyperref targets in LaTeX output.
